	    ImageCreateFromGif(), use GIF. If neither, try
	    ImageCreateFromJpeg() and output as JPEG.
	    Closes bug 11
	  - Get the root DN (namingContexts) even if it's a _multi_
	    leveled DN. Patch by Emmanouil G. Karatzas.
	    Closes bug 9
	  - Show the Actions (delete branch) button if we're running
	    in advanced mode.
	    Closes bug 15

	GUI layout change
	  - Possibility to set a value in the domain branch saying we
	    automatically would like to create username (uid) and/or
	    email address. This is done with two new attributes added
	    to the phpQLAdminBranch objectclass. The attributes oid is:
		autoCreateUsername	1.3.6.1.4.1.8767.3.2.1.14
		autoCreateMailAddress	1.3.6.1.4.1.8767.3.2.1.15
	    Closes bugs 3, 4 and 5
	  - Disable the showing of the icons 'Delivery properties',
	    'Mailbox properties' and 'User access' if we don't run in
	    advanced mode.
	    Closes bug 12

	Misc changes

phpQLAdmin 2.0.14 Release (jun 12 2003)
	Bug fixes
	  - Link to control_edit_attribute.php should include the MX host
	  - If we can't validate administrator, don't die with LDAP error,
	    return false (ie, admin is not valid).
	  - Maximum users for domain is just that 'FOR DOMAIN'! Not for
	    the whole three! I looked in the root dn/namingContexts for
	    this value, which is wrong!
	  - Don't force create a homedirectory if we're creating a 'Mail
	    account'. We re-use the mailMessageStore.
	    + We also force [ug]idNumber by re-using the forwarding account
	      numbers. That is, Mail and Forwarding accounts ALL use the
	      same uid and gid numbers. The reason for this is that Qmail
	      won't accept mails for a user if they don't have a uid/gid
	      number between a specific range (compile time). And we can't
	      add the uid/gid numbers if we don't have a homeDirectory
	      (schema enforced).
	  - When changing a QmailLDAP/Controls object, depending on where
	    we where called from (from the domain details - remove/add